--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,13 +9,13 @@
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">Môj prvý príspevok</a></h2>
+            <h2><a href="">Moj prvy prispevok</a></h2>
             <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         </div>
 
         <div>
             <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">Môj druhý príspevok</a></h2>
+            <h2><a href="">Moj druhy prispevok</a></h2>
             <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
         </div>
     </body>
